--- a/foundry.toml
+++ b/foundry.toml
@@ -2,5 +2,20 @@
 src = "src"
 out = "out"
 libs = ["lib"]
+solc = "0.8.19"
+optimizer = true
+optimizer_runs = 200
+gas_reports = ["*"]
 
-# See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
+[fmt]
+line_length = 120
+tab_width = 4
+bracket_spacing = true
+
+[rpc_endpoints]
+mainnet = "${MAINNET_RPC_URL}"
+goerli = "${GOERLI_RPC_URL}"
+
+[etherscan]
+mainnet = { key = "${ETHERSCAN_API_KEY}" }
+goerli = { key = "${ETHERSCAN_API_KEY}" }
